# breba-docs

./: README.md  pyproject.toml  run.py
.github/: test.yaml
.github/workflows/: manual_release.yaml  publish.yaml  python-package.yml  test.yaml
breba_docs/: cli.py  run.py  sample_doc.txt
breba_docs/analyzer/: service.py
breba_docs/services/: agent.py  mock_agent.py  openai_agent.py
docs/: PUBLISHING.md
src/breba-docs/: run.py
tests/: test_run.py
tests/integration/: command_output_fail.txt  command_output_pass.txt  test_container.py  test_openai_agent.py
