[tool.poetry]
name = "breba-docs"
version = "0.1.0"
description = "Documentation assistant will proof read your docs"
authors = ["Yason Khaburzaniya <yason@hey.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
docker = "^7.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
