[tool.poetry]
name = "breba-docs"
version = "0.1.0"
description = "Documentation assistant will proof read your docs"
authors = ["Yason Khaburzaniya <yason@hey.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
docker = "^7.1.0"
openai = "^1.38.0"
python-dotenv = "^1.0.1"


[tool.poetry.group.test.dependencies]
pytest = "^8.3.2"

[tool.pytest.ini_options]
pythonpath = [
  "breba_docs"
]


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
pytest-mock = "^3.14.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
